--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -3,7 +3,7 @@
 .component {
   background-color: white;
   border-radius: 5px;
-  padding: 18px; // ADDED PADDING & SHADOW
+  padding: 18px;
   box-shadow: 0px 6px 24px -14px $color-primary;
 }
 
