--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -2,12 +2,18 @@
 
 .component {
   background-color: white;
-  border-radius: 5px;
-  padding: 18px;
+  border-radius: $radius;
+  padding: 20px;
   box-shadow: 0px 6px 24px -14px $color-primary;
 }
 
 .featured {
   @extend .component;
   border-left: 5px solid $color-primary;
+}
+
+@media only screen and (min-width: 900px) {
+  .component {
+    padding: 20px 40px;
+  }
 }
