--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -5,4 +5,6 @@ $color-dark: hsl(180, 8%, 52%);
 $color-darker: hsl(180, 14%, 20%);
 
 $font-family: 'League Spartan', sans-serif;
-$font-size: 15px;
+$font-size: 16px;
+
+$radius: 4px;
