--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -2,6 +2,7 @@ $color-primary: hsl(180, 29%, 50%);
 $color-background: hsl(180, 52%, 96%);
 $color-filters: hsl(180, 31%, 95%);
 $color-dark: hsl(180, 8%, 52%);
+$color-dark-opaque: hsla(180, 8%, 52%, 0.45);
 $color-darker: hsl(180, 14%, 20%);
 
 $font-family: 'League Spartan', sans-serif;
