--- a/src/components/JobSummary/JobSummary.module.scss
+++ b/src/components/JobSummary/JobSummary.module.scss
@@ -7,7 +7,9 @@
 .heading {
   margin: 5px 0;
 
-  span {
+  p {
+    margin: 6px 0;
+    display: inline-block;
     font-weight: 700;
     color: $color-primary;
     margin-right: 12px;
@@ -46,7 +48,7 @@
 
 @media only screen and (min-width: 900px) {
   .heading {
-    span {
+    p {
       letter-spacing: 0.5px;
     }
   }
