--- a/src/components/JobSummary/JobSummary.module.scss
+++ b/src/components/JobSummary/JobSummary.module.scss
@@ -28,6 +28,10 @@
   letter-spacing: 0.45px;
   white-space: nowrap;
   cursor: pointer;
+
+  &:active {
+    color: $color-primary;
+  }
 }
 
 .params {
