--- a/src/components/ActiveFilter/ActiveFilter.module.scss
+++ b/src/components/ActiveFilter/ActiveFilter.module.scss
@@ -23,6 +23,10 @@
   position: relative;
   cursor: pointer;
 
+  &:active {
+    background-color: $color-darker;
+  }
+
   svg {
     position: absolute;
     top: 50%;
