--- a/src/components/KeywordTile/KeywordTile.module.scss
+++ b/src/components/KeywordTile/KeywordTile.module.scss
@@ -11,6 +11,11 @@
   color: $color-primary;
   border-radius: $radius;
   cursor: pointer;
+
+  &:active {
+    background-color: $color-primary;
+    color: white;
+  }
 }
 
 @media only screen and (min-width: 900px) {
