Add active and hover transitions

--- a/src/components/ActiveFilter/ActiveFilter.module.scss
+++ b/src/components/ActiveFilter/ActiveFilter.module.scss
@@ -25,6 +25,7 @@
 
   &:active {
     background-color: $color-darker;
+    transition: $transition-active;
   }
 
   svg {
@@ -38,5 +39,6 @@
 @media (hover: hover) {
   .removeButton:hover {
     background-color: $color-darker;
+    transition: $transition-hover;
   }
 }
