--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -9,3 +9,6 @@ $font-family: 'League Spartan', sans-serif;
 $font-size: 16px;
 
 $radius: 4px;
+
+$transition-hover: all 0.1s ease-in-out;
+$transition-active: all 0.1s ease-in;
