--- a/src/components/KeywordTile/KeywordTile.module.scss
+++ b/src/components/KeywordTile/KeywordTile.module.scss
@@ -15,6 +15,7 @@
   &:active {
     background-color: $color-primary;
     color: white;
+    transition: $transition-active;
   }
 }
 
@@ -29,5 +30,6 @@
   .component:hover {
     background-color: $color-primary;
     color: white;
+    transition: $transition-hover;
   }
 }
