Fix Card shadow

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,4 +1,5 @@
 $color-primary: hsl(180, 29%, 50%);
+$color-primary-opaque: hsl(180, 29%, 50%, 0.5);
 $color-background: hsl(180, 52%, 96%);
 $color-filters: hsl(180, 31%, 95%);
 $color-dark: hsl(180, 8%, 52%);
