--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -4,7 +4,7 @@
   background-color: white;
   border-radius: $radius;
   padding: 20px;
-  box-shadow: 0px 6px 24px -14px $color-primary;
+  box-shadow: 0px 12px 26px -12px $color-primary-opaque;
 }
 
 .featured {
