Add Filters animation

--- a/src/components/Filters/Filters.module.scss
+++ b/src/components/Filters/Filters.module.scss
@@ -2,6 +2,13 @@
 
 .component {
   margin-top: -36px;
+  transition: $transition-hover;
+  opacity: 0;
+}
+
+.component_active {
+  @extend .component;
+  opacity: 1;
 }
 
 .wrapper {
