--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -11,5 +11,6 @@ $font-size: 16px;
 
 $radius: 4px;
 
+$transition-animation: all 0.15s ease-in-out;
 $transition-hover: all 0.1s ease-in-out;
 $transition-active: all 0.1s ease-in;
